fixed dark mode for side menu

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -30,7 +30,7 @@ ion-menu {
 .dark-background {
   background-color: $dark;
 
-  .list-md ion-item-sliding {
+  .list-md {
     background-color: $dark;
 
     .item-md {
